Test video thingy
w titleby kingston

--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
             <div class="blurDiv hiddenBlurRight"></div>
         </div>
         
+
+    <section>
+        <video id="Overview" autoplay muted loop class="sectionVideo">
+            <source src="media/Overview.mp4" type="video/mp4">
+        </video>
+
+    </section>
+    
     </section>
     <section>
         <div id="footer">
