--- a/index.html
+++ b/index.html
@@ -124,13 +124,17 @@
         </div>
         
 
+
+
     <section>
-        <div>
+        <div id="ourRobot">
+            <h2 class="hidden">The <span>Monroe</span>Bot</h2>
             <video id="Overview" autoplay muted loop class="sectionVideo">
                 <source src="media/Overview.mp4" type="video/mp4">
             </video>
+            <div class="blurDiv hiddenBlur"></div>
         </div>
-    </section>  
+    </section>
     <section>
         <div id="footer">
             
