--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section>
         <div class="mainHeader">
             <video id="headerVideo" autoplay muted loop>
-                <source src="media/headerVideo.mp4" type="video/mp4">
+                <source src="media/farAuto.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <h1 id="head1">
